color contrast issue

--- a/css/style.css
+++ b/css/style.css
@@ -1406,7 +1406,7 @@ main:focus {
   opacity: 0;
   transition: opacity 0.3s ease;
   z-index: 11;
-  background-color: var(--orange-deep);
+  background-color: #000;
   pointer-events: none;
 }
 
